5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1798_2567.log
== SUBMITION (2019-06-10 14:55:26) 
-- CODE:
e = int(input("qtd estrela: "))
c = j

while(c>0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c<=j):
	for i in range()
		a = ""
	c = c + 1
	print(a)
-- EXECUTION TIME:
0.553332
-- ERROR:
  File "/home/codebench/codes/1798/2567/main.py", line 12
    for i in range()
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:56:07) 
-- CODE:
e = int(input("qtd estrela: "))
c = j

while(c>0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c<=j):
	a = ""
	for i in range()
		b = ""
	c = c + 1
	print(b)
-- EXECUTION TIME:
0.746168
-- ERROR:
  File "/home/codebench/codes/1798/2567/main.py", line 13
    for i in range()
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:56:22) 
-- CODE:
e = int(input("qtd estrela: "))
c = j

while(c>0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c<=j):
	a = ""
	for i in range()
		b = b + "*"
	c = c + 1
	print(b)
-- EXECUTION TIME:
0.819284
-- ERROR:
  File "/home/codebench/codes/1798/2567/main.py", line 13
    for i in range()
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:56:24) 
-- CODE:
e = int(input("qtd estrela: "))
c = j

while(c>0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c<=j):
	a = ""
	for i in range()
		b = b + "*"
	c = c + 1
	print(b)
-- ERROR:
File "XXXX", line 13
    for i in range()
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:56:31) 
-- CODE:
e = int(input("qtd estrela: "))
c = j

while(c>0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c<=j):
	a = ""
	for i in range(c)
		b = b + "*"
	c = c + 1
	print(b)
-- ERROR:
File "XXXX", line 13
    for i in range(c)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:56:35) 
-- CODE:
e = int(input("qtd estrela: "))
c = j

while(c>0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c<=j):
	a = ""
	for i in range(c):
		b = b + "*"
	c = c + 1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c = j
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:57:41) 
-- CODE:
e = int(input("qtd estrela: "))
c = j

while(c>0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c<=j):
	a = ""
	for i in range(c):
		b = b + "*"
	c = c + 1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c = j
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:58:01) 
-- CODE:
e = int(input("qtd estrela: "))
c = n

while(c > 0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c <= n):
	a = ""
	for i in range(c):
		b = b + "*"
	c = c + 1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c = n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:00:00) 
-- CODE:
e = int(input("qtd estrela: "))
c = n

while(c > 0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c <= n):
	a = ""
	for i in range(c):
		b = b + "*"
	c = c + 1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c = n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:01:21) 
-- CODE:
e = int(input("qtd estrela: "))
c = e

while(c > 0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c <= e):
	a = ""
	for i in range(c):
		b = b + "*"
	c = c + 1
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    b = b + "*"
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:01:45) 
-- CODE:
e = int(input("qtd estrela: "))
c = e

while(c > 0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c <= e):
	a = ""
	for i in range(c):
		a = a + "*"
	c = c + 1
	print(a)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:01:52) 
-- CODE:
e = int(input("qtd estrela: "))
c = e

while(c > 0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c <= e):
	a = ""
	for i in range(c):
		a = a + "*"
	c = c + 1
	print(a)
-- EXECUTION TIME:
0.701543
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:01:58) 
-- CODE:
e = int(input("qtd estrela: "))
c = e

while(c > 0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c <= e):
	a = ""
	for i in range(c):
		a = a + "*"
	c = c + 1
	print(a)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:20:51) 
-- CODE:
e = int(input("qtd estrela: "))
c = e

while(c > 0):
	s = ""
	for i in range (c):
		s = s + "*"
	c = c - 1
	print(s)
c=1
while(c <= e):
	a = ""
	for i in range(c):
		a = a + "*"
	c = c + 1
	print(a)
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
